fix some correct logic for rendering